--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8080
 
 # DataSource Config
 spring.datasource.url=jdbc:mysql://localhost:3306/loanapp_db
-spring.datasource.username=root
-spring.datasource.password=IITR4kan@
+spring.datasource.username=
+spring.datasource.password=
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
@@ -21,3 +21,7 @@ server.servlet.session.cookie.same-site=LAX
 server.servlet.session.cookie.secure=false
 # Optional: Increase session timeout (in seconds, here = 30 minutes)
 server.servlet.session.timeout=1800
+
+#Logger Config
+logging.level.root=INFO
+logging.level.com.yourcompany.loanapp=INFO
