add : scheduler, ml api res/req dto, update: api paths

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
+
+#Logger Config
+logging.level.root=INFO
+logging.level.com.yourcompany.loanapp=INFO
