--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 spring.loanInfo.name=ABC Loan Processing
 
+# HTTP server port
+server.port=8080
+
 # DataSource Config
 spring.datasource.url=jdbc:mysql://localhost:3306/loanapp_db
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=IITR4kan@
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
+
+# ---- Session / Cookie Config for CORS + Credentials ----
+# Allow session cookies to be sent in cross-origin requests
+server.servlet.session.cookie.same-site=LAX
+# Required when SameSite=None (only works on HTTPS or localhost dev)
+server.servlet.session.cookie.secure=false
+# Optional: Increase session timeout (in seconds, here = 30 minutes)
+server.servlet.session.timeout=1800
