--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
 <!--            <version>3.4.2</version>-->
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.scala-lang</groupId>
+     <artifactId>scala-library</artifactId>
+     <version>2.13.0</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
