--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 #spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
 
