--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,14 @@ spring.loanInfo.name=ABC Loan Processing
 server.port=8080
 
 # DataSource Config
-spring.datasource.url=jdbc:mysql://localhost:3306/loanapp_db
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_username}
+spring.datasource.password=${DB_password}
 
 # JPA Config
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-#spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 # ---- Session / Cookie Config for CORS + Credentials ----
 # Allow session cookies to be sent in cross-origin requests
