update FE localhost in CORS config

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.3</version>
         </dependency>
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -101,6 +101,11 @@
 					</excludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
 		</plugins>
 	</build>
 
