add: docker compose, update: allowed origins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,22 +5,18 @@ server.port=8080
 
 # DataSource Config
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_username}
-spring.datasource.password=${DB_password}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA Config
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 # ---- Session / Cookie Config for CORS + Credentials ----
-# Allow session cookies to be sent in cross-origin requests
-server.servlet.session.cookie.same-site=LAX
-# Required when SameSite=None (only works on HTTPS or localhost dev)
-server.servlet.session.cookie.secure=false
-# Optional: Increase session timeout (in seconds, here = 30 minutes)
+server.servlet.session.cookie.same-site=NONE
+server.servlet.session.cookie.secure=true
 server.servlet.session.timeout=1800
 
 #Logger Config
 logging.level.root=INFO
-logging.level.com.yourcompany.loanapp=INFO
